Fix content plugin, extra fields for check system plugin and etc.

--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -10,11 +10,11 @@ PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина Radi
 
 ; Params
 
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA = "Поля Schema.org"
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего назначить соответствие появившихся полей."
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META = "Поля Meta"
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META_DESC = "Данные поля используются для разметки Meta. Назначьте соответствие полей и заполните необходимые поля."
-PLG_CONTENT_RADICALMICRO_PARAM_TYPE = "Тип Schema.org"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_SCHEMA = "Поля Schema.org"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_SCHEMA_DESC = "Данные поля используются для разметки Schema.org.<br/>Вам необходимо настроить сопоставления, то есть указать какие поля материала (или какое значение) будет подставляться в соответствующее поле типа Schema.org. <br/>Для получения списка полей для сопоставления необходимо выбрать тип Schema.org и сохранить настройки."
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_META = "Поля Meta"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_META_DESC = "Данные поля используются для разметки Meta.<br/>Вам необходимо настроить сопоставления, то есть указать какие поля материала (или какое значение) будет подставляться в соответствующее поля разметрок (OG, Twitter и т.д.)"
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Тип Schema.org"
 
 ; Dynamic params
 
@@ -45,12 +45,6 @@ PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "Вид кухни мира"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Инструкция"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ингредиенты"
 
-; Schema
-
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER = "Поля Schema.org"
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего заполнить соответствующие поля."
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Тип Schema.org"
-
 ; Meta
 
 PLG_RADICALMICRO_PARAM_META_TITLE = "Заголовок"
@@ -65,10 +59,19 @@ PLG_RADICALMICRO_PARAM_META_CREATOR = "Twitter автора"
 PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Материал"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Дополнительно"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Не выбрано"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_CUSTOM = "Ручной ввод"
 PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Поля материала"
+
+; Fields
+
+PLG_RADICALMICRO_CONTENT_FIELD_CONTENT_PLACEHOLDER = "Введите значение"
 
 ; Other
 
-COM_CONTENT_RADICALMICRO_META_FIELDSET_LABEL = "Radical Micro - Meta"
-COM_CONTENT_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "Radical Micro - Schema.org"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_META_LABEL = "Meta"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_SCHEMA_LABEL = "Schema.org"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_LABEL = "Radical Micro"
 PLG_RADICALMICRO_CONTENT_PARAM_ENABLE = "Включить"
+PLG_RADICALMICRO_CONTENT_PARAM_ENABLE_DESC = "Включив опцию, Вы можете переопределить данные, которые поступают от плагина-провайдера Radical Micro - Content."
+PLG_RADICALMICRO_CONTENT_PARAM_DISABLED_ERROR_SCHEMA = "Возможность назначения соответствия полей появится после включения опции <b>Schema.org</b> в системном плагине Radical Micro."
+PLG_RADICALMICRO_CONTENT_PARAM_DISABLED_ERROR_META = "Возможность назначения соответствия полей появится после включения опции <b>Meta</b> в системном плагине Radical Micro."
