--- a/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -18,9 +18,9 @@ PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "By enabling this option, you can over
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TITLE = "Title"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_DESCRIPTION = "Description"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_IMAGE = "Image"
-PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Type "
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Type"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Site Twitter"
-PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_CREATOR = "Author Twitter"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_CREATOR = "Creator Twitter"
 
 ; Schema
 
@@ -56,5 +56,6 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINGREDIENT = "Ingredients"
 
 ; Other
 
-COM_MENUS_RADICALMICRO_META_FIELDSET_LABEL = "RadicalMicro - Meta"
-COM_MENUS_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "RadicalMicro - Schema.org"
+PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_LABEL = "Radical Micro"
+PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_META_LABEL = "Meta"
+PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_SCHEMA_LABEL = "Schema.org"
