--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -71,3 +71,10 @@ PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Insert Place"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_DESC = "Where to insert the Schema.org and Meta markup. Selecting Head will insert the markup before the closing <head> tag, selecting Body will insert it before the closing <body> tag."
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
+
+; Fields
+
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_HEADING = "Attension!"
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_TITLE = "This plugin works in conjunction with the Radical Micro system plugin."
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_ENABLED = "<span class='icon-check-circle' aria-hidden='true'></span> Radical Micro system plugin enabled"
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_DISABLED = "<span class='icon-circle-xmark' aria-hidden='true'></span> Radical Micro system plugin disabled or not configured"
