--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -75,3 +75,10 @@ PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Место вставки"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_DESC = "Место вставки разметки Schema.org и Meta. При выборе Head - разметка будет вставлена перед закрывающимся тегом <head>, при выборе Body - перед закрывающимся тегом <body>."
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
+
+; Fields
+
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_HEADING = "Внимание!"
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_TITLE = "Данный плагин работает совместно с системным плагином Radical Micro."
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_ENABLED = "<span class='icon-check-circle' aria-hidden='true'></span> Системный плагин Radical Micro включен"
+PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_DISABLED = "<span class='icon-cancel-circle' aria-hidden='true'></span> Системный плагин Radical Micro выключен или не настроен"
