--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.sys.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.sys.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -7,3 +7,8 @@
 
 PLG_SYSTEM_RADICALMICRO = "Система - Микроразметка Radical Micro"
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro - универсальный плагин микроразметки.</p>"
+
+; Uninstall
+
+PLG_SYSTEM_RADICALMICRO_ERROR_UNINSTALL_RADICALMICRO = "Прежде чем удалить плагин Radical Micro, Вы должны удалить все его плагины-провайдеры.<br/></br><a href='/administrator/index.php?option=com_installer&view=manage&filter[folder]=radicalmicro'>Найти все плагины-провайдеры Radical Micro</a>"
+PLG_SYSTEM_RADICALMICRO_ERROR_UNINSTALL_YOOTHEME = "Прежде чем удалить плагин Radical Micro, Вы должны удалить все его плагины-провайдеры.<br/></br><a href='/administrator/index.php?option=com_installer&view=manage&filter[search]=radical%20micro%20yootheme'>Найти плагин Radical Micro - Yootheme</a>"
