--- a/language/en-GB/en-GB.pkg_radicalmicro.sys.ini
+++ b/language/en-GB/en-GB.pkg_radicalmicro.sys.ini
@@ -1,12 +1,12 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PKG_RADICALMICRO = "Microdata RadicalMicro"
-PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro it is free plugin for metadata and microdata for site."
+PKG_RADICALMICRO = "Microdata Radical Micro"
+PKG_RADICALMICRO_DESCRIPTION = "Radical Micro is a free plugin generating metadata (Open Graph, Twitter etc.) and microdata (Google Structured Data)."
 
 PKG_RADICALMICRO_ERROR_COMPATIBLE_PHP = "This version is compatible only with PHP %s and later."
 PKG_RADICALMICRO_ERROR_COMPATIBLE_JOOMLA = "This version is compatible only with Joomla %s and later."
