--- a/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
+++ b/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
@@ -1,12 +1,12 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PKG_RADICALMICRO = "Микроразметка RadicalMicro"
-PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro - решение, позволяющее добавить микроразметку и метаданные."
+PKG_RADICALMICRO = "Микроразметка Radical Micro"
+PKG_RADICALMICRO_DESCRIPTION = "Radical Micro - решение, позволяющее добавить микроразметку и метаданные."
 
 PKG_RADICALMICRO_ERROR_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями."
 PKG_RADICALMICRO_ERROR_COMPATIBLE_JOOMLA = "Данная версия совместима только с Joomla %s и более поздними версиями."
