--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -8,13 +8,13 @@
 PLG_RADICALMICRO_CONTENT = "Radical Micro - Content"
 PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Radical Micro Content Plugin Extension"
 
-; params
+; Params
 
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA = "Schema.org Fields"
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA_DESC = "These fields are used for Schema.org markup. To get a list of fields, select the Schema.org type and save the settings. Then map the fields that appear."
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META = "Meta Fields"
-PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META_DESC = "These fields are used for Meta markup. Map the fields and fill in the required fields."
-PLG_CONTENT_RADICALMICRO_PARAM_TYPE = "Schema.org Type"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_SCHEMA = "Schema.org Fields"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_SCHEMA_DESC = "These fields are used for Schema.org markup.<br/>You need to set up mappings, that is, specify which fields of the material (or which value) will be substituted into the corresponding field of the Schema.org type.<br/>To get a list of fields to match, select the Schema.org type and save the settings."
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_META = "Meta Fields"
+PLG_RADICALMICRO_CONTENT_PARAM_SPACER_META_DESC = "These fields are used for Meta markup.<br/>You need to set up mappings, that is, specify which fields of the material (or what value) will be substituted into the corresponding markup fields (OG, Twitter, etc.)"
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Schema.org Type"
 
 ; Dynamic params
 
@@ -25,7 +25,7 @@ PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Publication Date"
 PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Date Modified"
 PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Author"
 
-; product
+; Product
 
 PLG_RADICALMICRO_PARAM_SCHEMA_SKU = "SKU"
 PLG_RADICALMICRO_PARAM_SCHEMA_MPN = "Manufacturer Code"
@@ -33,7 +33,7 @@ PLG_RADICALMICRO_PARAM_SCHEMA_BRAND = "Manufacturer"
 PLG_RADICALMICRO_PARAM_SCHEMA_PRICE = "Price"
 PLG_RADICALMICRO_PARAM_SCHEMA_CURRENCY = "Currency"
 
-; recipe
+; Recipe
 
 PLG_RADICALMICRO_PARAM_SCHEMA_PREPTIME = "Prep time min."
 PLG_RADICALMICRO_PARAM_SCHEMA_COOKTIME = "Cooking time, min."
@@ -45,12 +45,6 @@ PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "World Cuisine View"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Instruction"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ingredients"
 
-; Schema
-
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER = "Schema.org fields"
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER_DESC = "These fields are used for Schema.org layout. To get a list of fields, select the Schema.org type and save the settings. Then fill in the appropriate fields."
-PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Schema.org type"
-
 ; Meta
 
 PLG_RADICALMICRO_PARAM_META_TITLE = "Title"
@@ -58,17 +52,26 @@ PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Description"
 PLG_RADICALMICRO_PARAM_META_IMAGE = "Image"
 PLG_RADICALMICRO_PARAM_META_TYPE = "Content Type"
 PLG_RADICALMICRO_PARAM_META_SITE = "Site Twitter"
-PLG_RADICALMICRO_PARAM_META_CREATOR = "Content Twitter"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Author Twitter"
 
 ; Groups
 
 PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Content"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Extra"
-PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Not selected"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "No selected"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_CUSTOM = "Custom"
 PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Content Fields"
+
+; Fields
+
+PLG_RADICALMICRO_CONTENT_FIELD_CONTENT_PLACEHOLDER = "Enter your value"
 
 ; Other
 
-COM_CONTENT_RADICALMICRO_META_FIELDSET_LABEL = "Radical Micro - Meta"
-COM_CONTENT_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "Radical Micro - Schema.org"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_META_LABEL = "Meta"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_SCHEMA_LABEL = "Schema.org"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_LABEL = "Radical Micro"
 PLG_RADICALMICRO_CONTENT_PARAM_ENABLE = "Enable"
+PLG_RADICALMICRO_CONTENT_PARAM_ENABLE_DESC = "By enabling this option, you can override the data that comes from Radical Micro - Content provider plugins."
+PLG_RADICALMICRO_CONTENT_PARAM_DISABLED_ERROR_SCHEMA = "The ability to assign field mappings will appear after enabling the <b>Schema.org</b> option in the Radical Micro system plugin."
+PLG_RADICALMICRO_CONTENT_PARAM_DISABLED_ERROR_META = "The ability to assign field mappings will appear after enabling the <b>Meta</b> option in the Radical Micro system plugin."
