--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.sys.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.sys.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   0.2.1
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -7,3 +7,8 @@
 
 PLG_SYSTEM_RADICALMICRO = "System - Radical Micro"
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro is a general purpose microdata plugin.</p>"
+
+; Uninstall
+
+PLG_SYSTEM_RADICALMICRO_ERROR_UNINSTALL_RADICALMICRO = "Before you remove the Radical Micro plugin, you must remove all Radical Micro plugins.<br/></br><a href="/administrator/index.php?option=com_installer&view=manage&filter[folder]=radicalmicro">Find Radical Micro plugins</a>"
+PLG_SYSTEM_RADICALMICRO_ERROR_UNINSTALL_RADICALMICRO = "Before you remove the Radical Micro plugin, you must remove the Radical Micro - Yootheme plugin.<br/></br><a href="/administrator/index.php?option=com_installer&view=manage&filter[search]=radical%20micro%20yootheme">Find Radical Micro - Yootheme plugin</a>"
