Fix title and desc for menu plugin

--- a/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
@@ -12,6 +12,13 @@ PLG_RADICALMICRO_MENU_DESCRIPTION = "Radical Micro Menu Item Plugin Extension"
 
 PLG_RADICALMICRO_MENU_PARAM_ENABLE = "Enable"
 PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "By enabling this option, you can override the data that comes from provider plugins. Menu items take precedence over provider plugins."
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE = "Replace Title"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_DESC = "Choose Yes if you want the title to change to the field specified in the menu."
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_DESCRIPTION = "Replace Description"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_DESCRIPTION_DESC = "Choose Yes if you want the title to change to the one specified in the Description Meta Tag field"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE = "Title Replacement Source"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE_TITLE = "Browser Page Title Field"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE_HEADING = "Page Title Field"
 
 ; Meta
 
