--- a/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
@@ -12,6 +12,13 @@ PLG_RADICALMICRO_MENU_DESCRIPTION = "Расширение плагина Radical
 
 PLG_RADICALMICRO_MENU_PARAM_ENABLE = "Включить"
 PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "Включив опцию, Вы можете переопределить данные, которые поступают от плагинов-провайдеров. Приоритет у пунктов меню выше, чем у плагинов-провайдеров."
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE = "Заменять заголовок"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_DESC = "Выберите Да, если хотите, чтобы заголовок менялся на указанный в меню поле."
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_DESCRIPTION = "Заменять описание"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_DESCRIPTION_DESC = "Выберите Да, если хотите, чтобы заголовок менялся на указанное в поле Метатег Description"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE = "Источник для замены заголовка"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE_TITLE = "Поле Заголовок страницы в браузере"
+PLG_RADICALMICRO_MENU_PARAM_REPLACE_TITLE_SOURCE_HEADING = "Поле Заголовок страницы"
 
 ; Meta
 
