--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
@@ -70,7 +70,7 @@ PLG_RADICALMICRO_CONTENT_FIELD_CONTENT_PLACEHOLDER = "Enter your value"
 
 PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_META_LABEL = "Meta"
 PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_SCHEMA_LABEL = "Schema.org"
-PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_LABEL = "Radical Micro"
+PLG_RADICALMICRO_CONTENT_FIELDSET_RADICALMICRO_LABEL = "Микроразметка"
 PLG_RADICALMICRO_CONTENT_PARAM_ENABLE = "Enable"
 PLG_RADICALMICRO_CONTENT_PARAM_ENABLE_DESC = "By enabling this option, you can override the data that comes from Radical Micro - Content provider plugins."
 PLG_RADICALMICRO_CONTENT_PARAM_DISABLED_ERROR_SCHEMA = "The ability to assign field mappings will appear after enabling the <b>Schema.org</b> option in the Radical Micro system plugin."
