--- a/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
@@ -63,6 +63,6 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINGREDIENT = "Ингред
 
 ; Other
 
-PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_LABEL = "Radical Micro"
+PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_LABEL = "Микроразметка"
 PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_META_LABEL = "Meta"
 PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_SCHEMA_LABEL = "Schema.org"
