Add new og and twitter tags, expand default plugin

--- a/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
+++ b/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
@@ -10,12 +10,13 @@ PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Extension of the Radical Micro plugin to
 
 ; params
 
-PLG_RADICALMICRO_DEFAULT_PARAM_TITLE = "Title"
-PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_VALUE = "Title Tag"
-PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION = "Description"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE = "Title (Og, Twitter)"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_NONE = "Don't Use"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_PAGE = "Title Tag"
+PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION = "Description (Og, Twitter)"
 PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_NONE = "Don't Use"
 PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_PAGE = "Description Tag"
-PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE = "Image"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE = "Image (Og, Twitter)"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_NONE = "Don't Use"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_STATIC = "Static Image"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_BODY = "First Image"
