--- a/plg_radicalmicro_default/language/ru-RU/ru-RU.plg_radicalmicro_default.ini
+++ b/plg_radicalmicro_default/language/ru-RU/ru-RU.plg_radicalmicro_default.ini
@@ -10,13 +10,18 @@ PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Расширение плагина Radi
 
 ; Params
 
-PLG_RADICALMICRO_DEFAULT_PARAM_TITLE = "Заголовок"
-PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_VALUE = "Тег Title"
-PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE = "Заголовок (Og, Twitter)"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_NONE = "Не использовать"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_PAGE = "Тег Title"
+PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION = "Описание (Og, Twitter)"
 PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_NONE = "Не использовать"
 PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_PAGE = "Тег Description"
-PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE = "Изображение"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE = "Изображение (Og, Twitter)"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_NONE = "Не использовать"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_STATIC = "Статическое изображение"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_BODY = "Первое изображение"
 PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE = "Статическое изображение"
+PLG_RADICALMICRO_DEFAULT_PARAM_SITE_NAME = "Название сайта (Og)"
+PLG_RADICALMICRO_DEFAULT_PARAM_LOCALE = "Локализация (Og)"
+PLG_RADICALMICRO_DEFAULT_PARAM_SITE = "Твиттер сайта (Twitter)"
+PLG_RADICALMICRO_DEFAULT_PARAM_CREATOR = "Твиттер создателя контента (Twitter)"
