--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
@@ -9,20 +9,17 @@ PLG_SYSTEM_RADICALMICRO = "System - Microdata Radical Micro"
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro is a general purpose microdata plugin.</p>"
 
 ; Fieldsets
-
 COM_PLUGINS_SCHEMA_FIELDSET_LABEL = "Schema.org"
 COM_PLUGINS_META_FIELDSET_LABEL = "Meta"
 COM_PLUGINS_EXTRA_FIELDSET_LABEL = "Extra"
 
 ; Basic
-
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA = "Schema.org"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_DESC = "Enable Adding Schema.org Markup"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META = "Meta"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META_DESC = "Enable Meta Tags"
 
 ; schema
-
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE = "Website Markup"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE_DESC = "Add Schema.org markup of type Website in addition to existing markups"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION = "Organization Markup"
@@ -51,20 +48,51 @@ PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE = "Basic Markup"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE_DESC = "Add basic page layout in addition to existing layouts"
 
 ; open graph
-
 PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "OpenGraph Markup"
 PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Add OpenGraph markup to existing markups"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Twitter markup"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Add Twitter Layout in addition to existing Layouts"
 
-; Other
+; Dynamic params
+PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_SCHEMA_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_SCHEMA_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Publication Date"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Date Modified"
+PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Author"
 
+; Product
+PLG_RADICALMICRO_PARAM_SCHEMA_SKU = "SKU"
+PLG_RADICALMICRO_PARAM_SCHEMA_MPN = "Manufacturer Code"
+PLG_RADICALMICRO_PARAM_SCHEMA_BRAND = "Manufacturer"
+PLG_RADICALMICRO_PARAM_SCHEMA_PRICE = "Price"
+PLG_RADICALMICRO_PARAM_SCHEMA_CURRENCY = "Currency"
+
+; Recipe
+PLG_RADICALMICRO_PARAM_SCHEMA_PREPTIME = "Prep time min."
+PLG_RADICALMICRO_PARAM_SCHEMA_COOKTIME = "Cooking time, min."
+PLG_RADICALMICRO_PARAM_SCHEMA_TOTALTIME = "Total time, min."
+PLG_RADICALMICRO_PARAM_SCHEMA_CALORIES = "Calories"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECATEGORY = "Dish Type"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEYIELD = "Number of servings"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "World Cuisine View"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Instruction"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ingredients"
+
+; Meta
+PLG_RADICALMICRO_PARAM_META_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_META_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_META_TYPE = "Content Type"
+PLG_RADICALMICRO_PARAM_META_SITE = "Site Twitter"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Author Twitter"
+
+; Other
 PLG_SYSTEM_RADICALMICRO_PLUGIN_DISABLED = "Enable the Radical Micro plugin to continue working"
 PLG_SYSTEM_RADICALMICRO_NO_USER = "Author Unknown"
 PLG_SYSTEM_RADICALMICRO_BREADCRUMBS_HOME = "Home"
 
 ; Extra
-
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT = "Check Markup"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT_DESC = "If set to Yes, the plugin will not embed markup if the same type of markup is already on the page."
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Insert Place"
@@ -73,7 +101,6 @@ PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
 
 ; Fields
-
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_HEADING = "Attension!"
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_TITLE = "This plugin works in conjunction with the Radical Micro system plugin."
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_ENABLED = "<span class='icon-check-circle' aria-hidden='true'></span> Radical Micro system plugin enabled"
