--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -9,20 +9,17 @@ PLG_SYSTEM_RADICALMICRO = "Система - Микроразметка Radical M
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro - универсальный плагин микроразметки.</p>"
 
 ; Fieldsets
-
 COM_PLUGINS_SCHEMA_FIELDSET_LABEL = "Schema.org"
 COM_PLUGINS_META_FIELDSET_LABEL = "Meta"
 COM_PLUGINS_EXTRA_FIELDSET_LABEL = "Дополнительно"
 
 ; Basic
-
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA = "Schema.org"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_DESC = "Включить добавление разметки Schema.org"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META = "Meta"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META_DESC = "Включить добавление мета тегов"
 
 ; Schema
-
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE = "Разметка Website"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE_DESC = "Добавить разметку Schema.org типа Website в дополнение к существующим разметкам"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION = "Разметка Organization"
@@ -55,20 +52,54 @@ PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE = "Основная раз
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE_DESC = "Добавить основную разметку страницы в дополнение к существующим разметкам"
 
 ; Opengraph
-
 PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "Разметка OpenGraph"
 PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Добавить разметку OpenGraph к существующим разметкам"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Разметка Twitter"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Добавить разметку Twitter в дополнение к существующим разметкам"
 
-; Other
+; Dynamic params
+PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_SCHEMA_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_SCHEMA_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Дата публикации"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Дата изменения"
+PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Автор"
 
+; Product
+PLG_RADICALMICRO_PARAM_SCHEMA_SKU = "Артикул"
+PLG_RADICALMICRO_PARAM_SCHEMA_MPN = "Код производителя"
+PLG_RADICALMICRO_PARAM_SCHEMA_BRAND = "Производитель"
+PLG_RADICALMICRO_PARAM_SCHEMA_PRICE = "Цена"
+PLG_RADICALMICRO_PARAM_SCHEMA_CURRENCY = "Валюта"
+
+; Meta
+PLG_RADICALMICRO_PARAM_META_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_META_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_META_TYPE = "Тип контента"
+PLG_RADICALMICRO_PARAM_META_SITE = "Twitter сайта"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Twitter автора"
+PLG_RADICALMICRO_PARAM_META_SITENAME = "Название сайта"
+PLG_RADICALMICRO_PARAM_META_CREATED = "Дата создания"
+PLG_RADICALMICRO_PARAM_META_MODIFIED = "Дата изменения"
+
+; Recipe
+PLG_RADICALMICRO_PARAM_SCHEMA_PREPTIME = "Время подготовки, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_COOKTIME = "Время приготовление, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_TOTALTIME = "Общее время, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_CALORIES = "Количество калорий"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECATEGORY = "Вид блюда"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEYIELD = "Количество порций"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "Вид кухни мира"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Инструкция"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ингредиенты"
+
+; Other
 PLG_SYSTEM_RADICALMICRO_PLUGIN_DISABLED = "Включите плагин Radical Micro для продолжения работы"
 PLG_SYSTEM_RADICALMICRO_NO_USER = "Автор неизвестен"
 PLG_SYSTEM_RADICALMICRO_BREADCRUMBS_HOME = "Главная"
 
 ; Extra
-
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT = "Проверка разметки"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT_DESC = "Если выбрано Да, то плагин не будет встраивать разметку, если разметка такого же типа уже есть на странице."
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Место вставки"
@@ -77,7 +108,6 @@ PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
 PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
 
 ; Fields
-
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_HEADING = "Внимание!"
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_TITLE = "Данный плагин работает совместно с системным плагином Radical Micro."
 PLG_SYSTEM_RADICALMICRO_FIELD_CHECK_RESULT_ENABLED = "<span class='icon-check-circle' aria-hidden='true'></span> Системный плагин Radical Micro включен"
