Add article OG tags

--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
@@ -52,6 +52,8 @@ PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "OpenGraph Markup"
 PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Add OpenGraph markup to existing markups"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Twitter markup"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Add Twitter Layout in addition to existing Layouts"
+PLG_RADICALMICRO_PARAM_META_ENABLE_ARTICLE = "Article markup"
+PLG_RADICALMICRO_PARAM_META_ENABLE_ARTICLE_DESC = "Add Article Layout in addition to existing Layouts"
 
 ; Dynamic params
 PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Title"
