--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -56,6 +56,8 @@ PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "Разметка OpenGraph"
 PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Добавить разметку OpenGraph к существующим разметкам"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Разметка Twitter"
 PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Добавить разметку Twitter в дополнение к существующим разметкам"
+PLG_RADICALMICRO_PARAM_META_ENABLE_ARTICLE = "Разметка Article"
+PLG_RADICALMICRO_PARAM_META_ENABLE_ARTICLE_DESC = "Добавить разметку Article в дополнение к существующим разметкам"
 
 ; Dynamic params
 PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Заголовок"
