Исправил название поля "страна" для организаций (#38)

--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -28,8 +28,8 @@ PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE = "Логотип"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE_DESC = "Логотип для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE = "Название"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE_DESC = "Название организации для разметки типа Organization"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Страна"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC  = "Страна организации для разметки типа Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Код страны"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC  = "Код страны организации, в соответствии с ISO 3166-2, для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY = "Город"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY_DESC = "Город организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION = "Штат/регион"
