Исправил название поля "страна" для организаций (#38)

--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
@@ -28,8 +28,8 @@ PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE = "Logo"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE_DESC = "Logo for organization markup"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE = "Title"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE_DESC = "Title for Organization layout"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Country"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC = "Country for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Country code"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC = "Organization country code, according to ISO 3166-2, for Organization layout"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY = "City"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY_DESC = "City for Organization layout"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION = "State/Region"
